<resources>
    <string name="app_name">ColourMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="tap_the_screen_and_buttons">Tap the screen and buttons</string>
    <string name="this_is_a_game">This is a game:</string>
    <string name="red">RED</string>
    <string name="yellow">YELLOW</string>
    <string name="green">GREEN</string>
</resources>